Enable JWT based security, grouping of APIs and openAPI 3.0.1
