# main.go
@@ -71,8 +71,14 @@ func getEnvVariable(key string) string {
 
 	// Route => handler
 	e.GET("/generate_token/:hostip/:userid/:passwd", api.GetTokenHandler)
-	e.GET("/count_by_process_run_date_id/:token/:processrundateid", api.GetByProcessRunDateIdHandler)
-	e.GET("/counts_between_process_run_date_ids/:token/:fromprocessrundateid/:toprocessrundateid", api.GetBetweenProcessRunDateIdsHandler)
+
+	/* e.GET("/count_by_process_run_date_id/:token/:processrundateid", api.GetByProcessRunDateIdHandler)
+	e.GET("/counts_between_process_run_date_ids/:token/:fromprocessrundateid/:toprocessrundateid", api.GetBetweenProcessRunDateIdsHandler) */
+
+	apigroup := e.Group("/api")
+	api.UseSubroute(apigroup)
+	//////apigroup.Use(middleware.JWT([]byte(getEnvVariable("POC_JWT_SECRET"))))
+	//apigroup.GET("", api.Restricted)
 
 	// Start server
 	e.Logger.Fatal(e.Start(apihost + ":" + apiport))
